Fixed security flaw

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
 	"bot":{
-		"token":"MTkyODAxNDcyMzg2MTcwODkw.CkOO3g.VM1vUXO4RkvLxEUJcWjOfPCNum4",
+		"token":"<INSERT BOT TOKEN HERE>",
 		"version":"v1.0.0",
 		"tts":false,
 		"game":"Doot",
